feat: fixes, features, whatever added markdown

--- a/files/footer.html
+++ b/files/footer.html
@@ -1,3 +1,3 @@
-<div class=center style="height:15px; padding-top:10px">
+<div class=footer>
    <p style="font-size:0.85em">CC0 Public Domain 2024 Shard Team</p>
 </div>
