--- a/files/header.html
+++ b/files/header.html
@@ -1,9 +1,19 @@
-<header class=center style="margin-top: 15px;">
-   <nav>
-      <a href="/doc/guide/getting-started">Get Started</a>
-      <a href="/doc">Documentation</a>
+<header>
+   <div class=navbar>
+      <a href="/">Home</a>
+      <a href="/docs">Documentation</a>
       <a href="/projects">Projects</a>
-      <a href="/blog">Blog</a>
       <a href="/community">Community</a>
-   </nav>
+
+      <div class=dropdown>
+         <button class="dropbtn">Theme
+            <i class="fa fa-caret-down"></i>
+         </button>
+         <div class="dropdown-content">
+            <a href="?t=nord">nord</a>
+            <a href="?t=gruvbox">gruvbox</a>
+            <a href="?t=classic">classic</a>
+         </div>
+      </div>
+   </div>
 </header>
