--- a/files/header.html
+++ b/files/header.html
@@ -4,6 +4,7 @@
       <a href="/docs">Documentation</a>
       <a href="/projects">Projects</a>
       <a href="/community">Community</a>
+      <a href="/blog">Blog</a>
 
       <div class=dropdown>
          <button class="dropbtn">Theme
