--- a/files/header.html
+++ b/files/header.html
@@ -1,15 +1,14 @@
 <header>
    <div class=navbar>
       <a href="/">Home</a>
-      <a href="/docs">Documentation</a>
       <a href="/projects">Projects</a>
       <a href="/community">Community</a>
+      <a href="/membership">Membership</a>
+      <a href="/rocks">Rocks</a>
       <a href="/blog">Blog</a>
 
       <div class=dropdown>
-         <button class="dropbtn">Theme
-            <i class="fa fa-caret-down"></i>
-         </button>
+         <button>Theme</button>
          <div class="dropdown-content">
             <a href="?t=nord">nord</a>
             <a href="?t=gruvbox">gruvbox</a>
