--- a/files/footer.html
+++ b/files/footer.html
@@ -1,3 +1,3 @@
 <div class=footer>
-   <p style="font-size:0.85em">CC0 Public Domain 2025 Shard Team</p>
+   <p style="font-size:0.85em">CC0 Public Domain 2025 Free Ammonia Foundation</p>
 </div>
