--- a/files/footer.html
+++ b/files/footer.html
@@ -1,3 +1,3 @@
 <div class=footer>
-	<small>CC0 Public Domain 2025 Free Ammonia Foundation</small>
+	CC0 Public Domain 2025 Free Ammonia Foundation
 </div>
