--- a/files/header.html
+++ b/files/header.html
@@ -2,8 +2,7 @@
    <div class=navbar>
       <a href="/">Home</a>
       <a href="/projects">Projects</a>
-      <a href="/community">Community</a>
-      <a href="/membership">Membership</a>
+      <!-- <a href="/community">Community</a> -->
       <a href="/rocks">Rocks</a>
       <a href="/blog">Blog</a>
 
